# SoundBoard_TG_bot

./: .env  .gitignore  Dockerfile  LICENSE  Makefile  README.md  app.py  bot.py  flake.nix  pyproject.toml  requirements.txt
.github/workflows/: lint.yaml
.github/workflows/setup_environment/: action.yaml
scripts/: start_database.sh
soundboard_tg_bot/: __main__.py
soundboard_tg_bot/tg_bot/: config.py
soundboard_tg_bot/tg_bot/handlers/: main.py
soundboard_tg_bot/tg_bot/models/: DBSM.py  __init__.py
soundboard_tg_bot/tg_bot/states/: __init__.py
tg_bot/: config.py
tg_bot/handlers/: __init__.py  main.py
tg_bot/models/: DBSM.py  __init__.py
tg_bot/states/: __init__.py  main.py
